# web-reference

./: .gitignore  Cargo.toml  LICENSE-MIT  html-5-specs.json  readme.md
examples/: using-html5-specs.rs  using-web-reference.rs
src/: lib.rs  prelude.rs
src/models/: attr.rs  browser.rs  common.rs  event.rs  lang.rs  mod.rs  tag.rs  types.rs  web.rs  web_impl.rs  web_impl_specs.rs
