[package]
name = "web-reference"
version = "0.1.0"
edition = "2021"
description = "Reference of HTML Tag Specifications"
license = "MIT or Apache-2.0"
include = ["src/**/*", "html-5-specs.json", "Cargo.toml", "LICENSE-MIT", "README.md"]
homepage = "https://github.com/Nejat/web-reference"
repository = "https://github.com/Nejat/web-reference"
authors = ["Nejat<nejatoz@gmail.com>"]
readme = "readme.md"
keywords = ["html", "reference"]
categories = ["Web programming"]

[profile.optimized]
inherits = "release"
opt-level = 3  # all optimizations
lto = true
codegen-units = 1

[dependencies]
const_format = { version = "0.2", optional = true }
lazy-regex = { version = "2" }
indexmap = { version = "1", optional = true }
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }

[[example]]
name = "web-reference"
path = "examples/using-web-reference.rs"
required-features = ["deserialize", "ordered-map", "serde_json"]

[[example]]
name = "html5-specs"
path = "examples/using-html5-specs.rs"
required-features = ["html5-specs"]

[features]
default = []
deserialize = ["serde/derive"]
html5-specs = ["deserialize", "serde_json", "const_format"]
ordered-map = ["indexmap", "indexmap/serde"]
serialize = ["serde/derive"]

[workspace]
members = [
    ".",
    "packages/web-reference-factory"
]
